--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -16,5 +16,9 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "typeRoots": [
+    "./types",
+    "./node_modules/@types"
+  ]
 }
